# despy

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
algorithms/dewsi/: index.html
algorithms/dewsiv/: index.html
algorithms/dewst/: index.html
algorithms/dewsu/: index.html
algorithms/dewsv/: index.html
algorithms/knndws/: index.html
algorithms/knndwsi/: index.html
algorithms/knorae/: index.html
algorithms/knoraiu/: index.html
algorithms/knorau/: index.html
algorithms/lwsei/: index.html
algorithms/lwseu/: index.html
algorithms/ola/: index.html
backends/annoy/: index.html
backends/faiss/: index.html
backends/hnsw/: index.html
backends/knn/: index.html
benchmark/: index.html
docs/: benchmark.md  index.md
docs/algorithms/: dewsi.md  dewsu.md  knndws.md  knndwsi.md  knorae.md  knoraiu.md  knorau.md  ola.md
docs/backends/: annoy.md  faiss.md  hnsw.md  knn.md
search/: search_index.json
selection/: index.html
src/deskit/: __init__.py  router.py
src/deskit/des/: __init__.py  dewsi.py  dewsiv.py  dewsu.py  dewsv.py  lwsei.py  lwseu.py
src/despy/des/: knorae.py  knoraiu.py  knorau.py
src/ensemble_weights/: __init__.py  _config.py  analysis.py  metrics.py  neighbors.py  router.py
src/ensemble_weights/base/: knnbase.py
src/ensemble_weights/des/: knndws.py  knorae.py  knoraiu.py  knorau.py  ola.py
tests/: benchmark.py  results.txt  showcase.py  test_results.txt
