[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deskit"
version = "0.2.0"
description = "A Python library for Dynamic Ensemble Selection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Tikhon Vodyanov" }
]
keywords = ["ensemble", "machine learning", "dynamic ensemble selection", "model routing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
exact = ["scikit-learn>=1.0"]
faiss  = ["faiss-cpu>=1.7"]
hnsw  = ["hnswlib>=0.7"]
annoy = ["annoy>=1.17"]
all   = ["scikit-learn>=1.0", "faiss-cpu>=1.7", "hnswlib>=0.7", "annoy>=1.17"]

[project.urls]
Homepage = "https://github.com/TikaaVo/deskit"
Repository = "https://github.com/TikaaVo/deskit.git"